# create-better-s-stack

./: AGENTS.md  CONTEXT.md  README.md  changelogithub.config.ts  lefthook.yml  package.json
.github/: CONTRIBUTING.md
.github/workflows/: pr-preview.yaml  release.yaml
.uvexp2/: pyproject.toml
.uvexp2/apps/api/: pyproject.toml
.uvexp2/apps/app/: pyproject.toml
MIGRATION/: 01-understanding-create-better-t-stack.md  02-implementation-extension-plan.md  03-tech-lead-summary.md
MIGRATION/issues/: 01-ecosystem-discriminator-skeleton.md  02-library-shape-generate-install.md  03-fastapi-api-service-shape.md  04-python-native-fullstack-frontends.md  05-fastapi-streamlit-uv-workspace.md  06-python-orm-database-reuse.md  07-ml-capability-pack-accelerator.md  08-genai-capability-pack.md  09-agents-capability-pack.md  10-python-docker-deploy.md  11-web-stack-builder-python.md  12-docs-polyglot-capability.md  README.md
apps/cli/: README.md  package.json  tsdown.config.ts
apps/cli/src/: cli.ts  constants.ts  index.ts  mcp.ts  types.ts  virtual.ts
apps/cli/test/: add-handler.test.ts  addon-setup-regressions.test.ts  cli-validation.test.ts  mcp.test.ts  (+11 more)
apps/web/: README.md  next.config.ts  package.json
docs/agents/: issue-tracker.md
scripts/: bump-version.ts  canary-release.ts  cleanup-previews.ts  publish-smoke.ts
ws-verify/: README.md  bts.jsonc  pyproject.toml
ws-verify/apps/api/: README.md  main.py  pyproject.toml
ws-verify/apps/api/tests/: test_app.py
ws-verify/apps/app/: README.md  app.py  pyproject.toml
ws-verify/apps/app/tests/: test_app.py
(+77 files in other folders)
